--- a/src/pages/english-format/RelationshipVerificationEnglish.css
+++ b/src/pages/english-format/RelationshipVerificationEnglish.css
@@ -191,6 +191,32 @@ select {
   width: 100%;
 }
 
+/* Red star */
+.required {
+  color: red;
+  margin-left: 4px;
+}
+
+.inline-input-wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.input-required-star {
+  position: absolute;
+  left: 6px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: red;
+  font-weight: bold;
+  pointer-events: none;
+  font-size: 14px;
+}
+
+.inline-input-wrapper input {
+  padding-left: 18px;
+}
+
 /* ================= PRINT STYLES ================= */
 @media print {
   body * {
